force-app/main/default/objects/Exclusive_Campaign__c/Exclusive_Campaign__c.object-meta.xml
<CustomObject>
    <label>Exclusive Campaign</label>
    <nameField>
        <label>Exclusive Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exclusive Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>