force-app/main/default/objects/Exclusive_Campaign__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>(Now() &gt;= Start_Date__c) &amp;&amp; (Now() &lt;= End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>