force-app/main/default/objects/Exclusive_Campaign__c/fields/AMERICAS__c.field-meta.xml
<CustomField>
    <fullName>AMERICAS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMERICAS</label>
    <type>Checkbox</type>
</CustomField>