force-app/main/default/objects/Exclusive_Campaign__c/fields/ASIA_NORTH_sans_COREE_CHINE__c.field-meta.xml
<CustomField>
    <fullName>ASIA_NORTH_sans_COREE_CHINE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASIA NORTH sans COREE &amp; CHINE</label>
    <type>Checkbox</type>
</CustomField>