force-app/main/default/objects/Exclusive_Campaign__c/fields/ASIA_SOUTH__c.field-meta.xml
<CustomField>
    <fullName>ASIA_SOUTH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ASIA SOUTH</label>
    <type>Checkbox</type>
</CustomField>