force-app/main/default/objects/Exclusive_Campaign__c/fields/CHINA__c.field-meta.xml
<CustomField>
    <fullName>CHINA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHINA</label>
    <type>Checkbox</type>
</CustomField>