force-app/main/default/objects/Exclusive_Campaign__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description/ purpose of the Exclusive Campaign</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>