force-app/main/default/objects/Exclusive_Campaign__c/fields/EMEA__c.field-meta.xml
<CustomField>
    <fullName>EMEA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMEA</label>
    <type>Checkbox</type>
</CustomField>