force-app/main/default/objects/Exclusive_Campaign__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date of Exclusive Campaign</description>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>