force-app/main/default/objects/Exclusive_Campaign__c/fields/JAPAN__c.field-meta.xml
<CustomField>
    <fullName>JAPAN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JAPAN</label>
    <type>Checkbox</type>
</CustomField>