force-app/main/default/objects/Exclusive_Campaign__c/fields/KOREA__c.field-meta.xml
<CustomField>
    <fullName>KOREA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KOREA</label>
    <type>Checkbox</type>
</CustomField>