force-app/main/default/objects/Exclusive_Campaign__c/fields/MANAGEMENT_ZONE_LEVEL_To_Delete__c.field-meta.xml
<CustomField>
    <fullName>MANAGEMENT_ZONE_LEVEL_To_Delete__c</fullName>
    <label>MANAGEMENT ZONE LEVEL (ToDelete)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MANAGEMENT_ZONE_LEVEL</valueSetName>
    </valueSet>
</CustomField>