force-app/main/default/objects/Exclusive_Campaign__c/fields/Related_Exclusive_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Exclusive_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Exclusive Campaign</label>
    <referenceTo>Exclusive_Campaign__c</referenceTo>
    <relationshipLabel>Related Exclusive Campaigns</relationshipLabel>
    <relationshipName>Exclusives_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>