force-app/main/default/objects/Exclusive_Campaign__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of the Exclusive Campaign</description>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>